--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,13 @@
     --background-col2: #E3E4E4;
     --background-col3: #FFFAF3;
     --theme_col0: #000457;
-    --theme_col_v2: #1a1a1a;
+    --theme_col_v2: #101010;
     --theme_col1: #391F84;
     --theme_col2: #18064A;
     --theme_col3: #404040;
-    --theme_col4: #242424;
+    --theme_col4: #191919;
     --theme_col5: #a17f00;
+    --theme_col6: #806503;
     --border_col: #dcdcdc;
     --gradient_start:var(--background-col1);
 }
@@ -62,12 +63,11 @@ body {
     height: 100vmax;
     width: 100%;
     display: grid;
-    grid-template: 35% 22% 35% 8% / 20% 80%;
     grid-template: 32% 25% 35% 8% / 20% 80%;
 }
 
 .about-view .main-summary {
-    height: 100vh;
+    /*height: 100vh;*/
     border-bottom: 2px solid #dcdcdc;
     border-bottom-color: var(--border_col);
 }
@@ -75,10 +75,10 @@ body {
 .intro-greeting {
     background-color: var(--background-col0);
     background-image: url("../images/graphics/astronaut_3.png");
-    background-size: 175%;
+    background-image: url("../images/graphics/loetCartoon_dottedCol.jpg");
+    background-size: 100%;
     background-repeat: no-repeat;
-    background-position: top;
-    background-position-y: 25%;
+    background-position: center;
     grid-row: 1;
     grid-column: 1 / 4;
     display: flex;
@@ -94,7 +94,9 @@ body {
 }
 
 .intro-name {
-    background-color: var(--theme_col0);
+    background-color: var(--theme_col2);
+    background-image: url("../images/graphics/Elements-Free-PNG-Image.png");
+    background-size: cover;
     grid-row: 2;
     grid-column: 1 / 5;
     display: flex;
@@ -103,7 +105,7 @@ body {
 
 .name-box {
     align-self: center;
-    color: var(--text_col2);
+    color: var(--text_col1);
     margin: 2%;
 }
 
@@ -151,7 +153,7 @@ body {
 }
 
 .intro-contact {
-    background-color: var(--theme_col3);
+    background-color: var(--theme_col4);
     grid-row: 4;
     grid-column: 1 / 3;
     display: flex;
@@ -192,7 +194,7 @@ body {
     align-self: end;
     display: flex;
     justify-content: space-evenly;
-    background: var(--theme_col0);
+    background: var(--theme_col4);
     visibility: hidden;
 }
 
@@ -216,7 +218,7 @@ body {
 
 .projectsDisplay{
     display: grid;
-    grid-template: 32vh auto/ 5% 90% 5%
+    grid-template: 32vmax auto/ 5% 90% 5%
 }
 
 .projectsContainer {
@@ -241,7 +243,7 @@ body {
 
 .pageTitle {
     color: var(--text_col1);
-    background-color: var(--theme_col0);
+    background-color: var(--theme_col2);
     background-image: url("../images/graphics/Elements-Free-PNG-Image.png");
     background-size: cover;
 }
@@ -272,7 +274,7 @@ body {
 
 .mail-box {
     width: fit-content;
-    background: var(--theme_col1);
+    background: var(--theme_col2);
     padding: 10px 20px;
     color: var(--text_col1);
     font-weight: 700;
@@ -324,7 +326,7 @@ body {
 }
 
 .about-skills .skill-row:nth-child(2) {
-    background-color: var(--theme_col1);
+    background-color: var(--theme_col4);
 }
 
 .skill-group {
@@ -389,9 +391,9 @@ body {
 .cardTile {
     display: flex;
     width: 90%;
-    max-width: 1000px;
     height: 48vmax;
-    max-height: 800px;
+    max-width: 800px;
+    max-height: 820px;
     align-self: center;
     background-color: #d6d6d6;
     padding: 5%;
@@ -472,7 +474,7 @@ body {
 }
 
 .moreContent {
-    background: var(--theme_col0);
+    background-color: var(--theme_col2);
     padding: 5%;
     align-self: center;
 }
@@ -565,6 +567,11 @@ body {
     .main-summary {
         height: 100vh;
     }
+
+    .projectsDisplay{
+        display: grid;
+        grid-template: 32vh auto/ 5% 90% 5%
+    }
 }
 
 
@@ -584,12 +591,11 @@ body {
     
     .name-box {
         align-self: center;
-        color: var(--text_col2);
         margin: 2%;
     }
     
     .name-box h1 {
-        font-size: 5em;
+        font-size: 7em;
     }
 
     .name-box span {
@@ -609,7 +615,6 @@ body {
     }
 
     .intro-contact {
-        background-color: var(--theme_col3);
         grid-row: 2;
         grid-column: 5;
         display: flex;
@@ -625,7 +630,7 @@ body {
     }
     
     .default-page .intro-summary p {
-        font-size: 1.4em;
+        font-size: 1.8em;
         letter-spacing: 2px;
         text-align: left;
     }
@@ -702,10 +707,6 @@ body {
         border-radius: 25px;
     }
     
-    .mail-box:hover {
-        background: var(--theme_col4);
-    }
-    
     .section-heading {
         grid-row: 1 / 3;
         grid-column: 1 / 3;
@@ -713,7 +714,7 @@ body {
         flex-direction: column;
         align-items: start;
         width: 75%;
-        margin-top: 20%;
+        margin-top: 15%;
         margin-left: 5%;
         justify-content: flex-start;
     }
@@ -776,7 +777,7 @@ body {
         letter-spacing: 4px;
         padding: 3% 6%;
         position: relative;
-        bottom: 10%;
+        bottom: 25%;
     }
 
     .cardImg {
@@ -791,8 +792,8 @@ body {
     }
     
     .cardTile {
-        height: 45vh;
-        max-height: 800px;
+        height: 50vh;
+        max-height: 840px;
     }
 
     .cardSummary {
