added navigation functionality

--- a/css/projects.css
+++ b/css/projects.css
@@ -4,20 +4,18 @@
 /* @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto&display=swap'); */
 
 
-/* Default common style */
-
-
 * {
     font-family: 'Roboto', sans-serif;
     font-family: Gotham XNarrow A,Gotham XNarrow B,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
-    --color1: #303030;
+    --background_col4: #d0d0d02b;
+    --color1: #212121;
     --line_col0: #000;
 }
 
 /*Scrollbar*/
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 12px;
     height: 15px;
 }
 
@@ -41,7 +39,6 @@
 li {
     list-style: none;
 }
-
 
 body {
     width: 100%;
