--- a/css/main.css
+++ b/css/main.css
@@ -6,48 +6,43 @@
     font-family: Gotham XNarrow A,Gotham XNarrow B,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
     --text_headings: #d70757;
-    --text_col0: #242424;
     --text_col1: #f5deb3;
-    --text_col2: #E9EAEC;
+    --text_col2: #e9eaec;
     --color0: #000;
-    --color1: #303030;
-    --background_col1: #FBF8F8;
-    --background_col2: #dadada;
-    --background_col3: #FFFAF3;
-    --background_col4: #d0d0d02b;
-    --theme_col0: #000457;
+    --color2: #dfdfdf;
+    --background_col1: #fbfbf8;
+    --background_col2: #f2f2f2;
+    --background_col3: #fffaf3;
     --theme_col1: #391F84;
     --theme_col2: #18064A;
-    --theme_col3: #404040;
     --theme_col4: #242424;
     --theme_col5: #a17f00;
-    --theme_col6: #806503;
     --theme_col7: #151515;
     --border_col: #dcdcdc;
-    --gradient_start:var(--background_col1);
+    --gradient_start: var(--background_col1);
 }
 
 /*Scrollbar*/
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 12px;
     height: 15px;
 }
 
 /*Track*/
 ::-webkit-scrollbar-track {
     border-radius: 0px;
-    background-color: var(--color1, #000);
+    background-color: var(--background_col2, #000);
     border-width: 3px;
     border-style: solid;
-    border-color: var(--color1);
-    box-shadow: inset 0 0 4px 1px #000000;
+    border-color: var(--background_col2);
+    box-shadow: inset 0 0 4px 1px #878787;
 }
 
 /*Handle*/
 ::-webkit-scrollbar-thumb {
-    background: #000;
+    background: var(--color2, #dfdfdf);
     border-radius: 10px;
-    border: 0.5px solid black;
+    border: 0.5px solid #a9a9a9;
 }
 
 .page {
