--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,8 +1,6 @@
-/* 
-Navigation style sheet
+/* NAVIGATION STYLE SHEET */
 
-This was separated because at the time I was experimenting with different navigation layouts.
-*/
+/* Separated sheet for experimentation. */
 
 .nav-container {
     /* background: #0f1210; */
@@ -19,28 +17,33 @@ This was separated because at the time I was experimenting with different naviga
     width: fit-content;
     height: 100%;
     margin: auto 0%;
-    margin-left: 2%;
-    /* display: flex; */
+    margin-left: 4px;
     text-decoration: none;
 }
 
 .brand-logo .img-icon {
     width: 90%;
-    max-width: 75px;
-    min-width: 50px;
     height: auto;
-    margin: 5% 0;
+    max-width: 58px;
+    min-width: 50px;
+    margin-top: 4px;
+    padding: 5px 10px;
+    background-color: #151515;
+    background-color: var(--theme_col7); 
+    box-shadow: 2px 2px 10px 0px #000000d6;
 }
 
 .menu-container {
     width: 50%;
     display: flex;
     justify-content: flex-end;
-    padding-left: 0.2%; 
+    padding-left: 5px;
+    background-color: var(--background_col2);
+    box-shadow: 8px 2px 10px 0px #000;
 }
 
 .burger-right {
-    width: 70%;
+    width: 75%;
     display: flex;
     justify-content: space-between;
     margin-right: 4%;
