--- a/css/navigation.css
+++ b/css/navigation.css
@@ -22,19 +22,19 @@
 }
 
 .brand-logo .img-icon {
-    width: 90%;
+    width: 80%;
     height: auto;
-    max-width: 58px;
-    min-width: 50px;
+    max-width: 40px;
+    min-width: 25px;
     margin-top: 4px;
-    padding: 5px 10px;
+    padding: 3px 6px;
     background-color: #151515;
     background-color: var(--theme_col7); 
     box-shadow: 2px 2px 10px 0px #000000d6;
 }
 
 .menu-container {
-    width: 50%;
+    width: 75%;
     display: flex;
     justify-content: flex-end;
     padding-left: 5px;
@@ -54,12 +54,33 @@
     text-align: center;
     align-self: center;
     font-weight: 700;
+    font-size: 2vmin;
+}
+
+.nav-container {
+    top: 0;
+    transition: all 1s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
 .scrollDown {
     top: -55px;
-    transition: all 1s cubic-bezier(0.39, 0.575, 0.565, 1);   
 }
 
 @media only screen and (min-width: 768px) {
+    .brand-logo .img-icon {
+        width: 90%;
+        max-width: 55px;
+        min-width: 40px;
+        margin-top: 4px;
+        padding: 5px 10px;
+    }
+
+    .menu-container {
+        width: 50%;
+    }
+
+    .nav-link {
+        font-size: 1em;
+    }
+
 }
