--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,9 @@
 * {
     font-family: Gotham XNarrow A,Gotham XNarrow B,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
-    --text_headings: #d70757;
+    --text_col0: #000000;
     --text_col1: #f5deb3;
-    --text_col2: #e9eaec;
-    --color0: #000;
+    --text_col2: #dfdfdf;
     --color2: #dfdfdf;
     --background_col1: #fbfbf8;
     --background_col2: #dfdfdf;
@@ -21,6 +20,12 @@
     --border_col: #bdbdbd;
     --gradient_start: var(--background_col1);
 }
+
+/* * {
+    --background_col1: #161616;
+    --background_col2: #242424;
+
+} */
 
 /*Scrollbar*/
 ::-webkit-scrollbar {
@@ -95,7 +100,7 @@ body {
 }
 
 .intro-greeting {
-    background-color: var(--color0);
+    background-color: #000000;
     background-image: url("../images/graphics/loetCartoon_dottedCol.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -153,6 +158,7 @@ body {
     font-size: 3vmin;
     letter-spacing: 1.5px;
     line-height: 1.6em;
+    color: var(--text_col0);
 }
 
 .descrBox {
@@ -485,6 +491,10 @@ body {
     padding: 6% 0%;
     align-self: flex-end;
     background-color: var(--theme_col4);
+    color: var(--text_col2);
+}
+
+.cardSummary .detailText {
     color: var(--text_col2);
 }
 
