--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,10 @@
     --theme_col8: #dfdfdf;
 
     --border_col: #bdbdbd;
+    --border_shadow1: #000;
+    --border_shadow2: #afafaf;
+
+
     --tile_shadow: #5c5c5c;
     --line_col0: #000000;
     --gradient_start: var(--background_col1);
@@ -54,6 +58,7 @@
     --theme_col8: #636361;
 
     --border_col: #191919;
+    --border_shadow2: #000;
     --tile_shadow: #080808;
 
     --img_filter: invert(1);
@@ -307,6 +312,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    box-shadow: 2px 0px 6px 0px #000;
 }
 
 .pageTitle {
@@ -360,6 +366,7 @@ body {
     grid-row: 2;
     background-color: var(--background_col3);
     justify-content: center;
+    box-shadow: 0px 0px 6px 1px var(--border_shadow2);
 }
 
 .about-core {
@@ -615,7 +622,7 @@ body {
     width: 95%;
     display: flex;
     justify-content: space-between;
-    margin-right: 0;
+    margin-right: 10px;
 }
 
 .nav-link {
