--- a/css/main.css
+++ b/css/main.css
@@ -247,6 +247,8 @@ body {
     align-self: center;
 }
 
+
+
 .social-icon {
     width: 25px;
     filter: opacity(0.7);
@@ -304,6 +306,15 @@ body {
     width: 100%;
     justify-content:space-around;
     padding-top: 15%;
+}
+
+.socials {
+    grid-row: 9;
+    grid-column: 1/7;
+    display: flex;
+    justify-content: space-around;
+    background: var(--theme_col4);
+    padding: 5px 10%;
 }
 
 .headingView {
@@ -1181,12 +1192,12 @@ a {
 
     .project-details {
         display: flex;
-        padding: 2% 0;
+        padding: 2% 4%;
     }
 
     .info-column {
         width: 35%;
-        margin: 2% 5%;
+        margin: 2% 4%;
     }
 
     .info-column h3 {
