--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 /* MAIN STYLE SHEET FOR PORTFOLIO SITE */
 
 
-
 :root {
     font-family: Gotham XNarrow A,Gotham XNarrow B,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -97,8 +96,6 @@
 
 :target {
     display: block;
-    /* display: flex;
-    flex-direction: column; */
 }
 
 :target ~ .default-page {
@@ -150,7 +147,8 @@ body {
     grid-row: 1;
     grid-column: 1 / 4;
     display: flex;
-    justify-content: center;   
+    justify-content: center; 
+    box-shadow: 3px -20px 20px 20px var(--background_col3); 
 }
 
 .intro-greeting h2 {
@@ -247,8 +245,6 @@ body {
     align-self: center;
 }
 
-
-
 .social-icon {
     width: 25px;
     filter: opacity(0.7);
@@ -260,19 +256,23 @@ body {
     filter: drop-shadow(2px 4px 4px #000); 
 }
 
-.main-summary .social {
+.social {
     grid-row: 4;
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     align-self: end;
     display: flex;
     justify-content: space-evenly;
     background: var(--theme_col4);
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
-.contacts-view .social {
+/* .contacts-view .social {
     visibility: visible;
-}
+} */
+
+/* .social {
+    visibility: visible;
+} */
 
 .summary {
     height: 100vmax;
@@ -308,14 +308,14 @@ body {
     padding-top: 15%;
 }
 
-.socials {
+/* .socials {
     grid-row: 9;
     grid-column: 1/7;
     display: flex;
     justify-content: space-around;
     background: var(--theme_col4);
     padding: 5px 10%;
-}
+} */
 
 .headingView {
     grid-column: 1 / 4;
@@ -370,6 +370,12 @@ body {
 
 .mail-box:hover {
     background: var(--theme_col5);
+}
+
+.highlight-text {
+    font-weight: 600;
+    color: var(--theme_col5);
+
 }
 
 .section-content {
@@ -649,7 +655,8 @@ body {
 
 .nav-container {
     top: 0;
-    transition: all 1s cubic-bezier(0.39, 0.575, 0.565, 1);
+    transition: all 1.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+    transition-delay: 0.4s;
 }
 
 .scrollDown {
@@ -1281,8 +1288,6 @@ a {
         width: 40%;
         left: 8%;
     }
-    
-    
 
     /* mode switch */
 }
@@ -1351,7 +1356,7 @@ a {
         align-self: flex-end;
     }
 
-    .main-summary .social {
+    /* .main-summary .social {
         grid-row: 2;
         grid-column: 1 / 3;
         align-self: end;
@@ -1359,6 +1364,22 @@ a {
         justify-content: space-evenly;
         visibility: visible;
         background: none;
+    } */
+
+    .social {
+        grid-row: 2;
+        grid-column: 1 / 3;
+        align-self: end;
+        display: flex;
+        justify-content: space-evenly;
+        /* visibility: visible; */
+        background: none;
+    }
+
+    .projectsDisplay .social {
+        width: 40%;
+        position: fixed;
+        bottom: 0%;
     }
     
     .summary {
@@ -1370,12 +1391,15 @@ a {
     .projectsDisplay{
         display: grid;
         grid-template: 40vh 20vh 5vh 15vh 20vh auto / 10% 30% 10% 20% 20% 10%;
+        grid-template: 40vh 20vh 5vh 15vh 20vh auto / 20% 20% 5% 50% 5%;
+        grid-template: 30vh 30vh 15vh 20vh / 20% 20% 5% 50% 5%;
     }
     
     .projectsContainer {
-        grid-row-start: 4;
-        grid-row-end: 8;
-        grid-column: 2 / 6;
+        /* grid-row-end: 8;
+        grid-column: 2 / 6; */
+        grid-column: 4;
+        grid-row: 2 / 6;
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -1391,6 +1415,12 @@ a {
         justify-content: center;
         align-items: center;
         text-align: center;
+    }
+
+    .projectsDisplay .headingView {
+        position: fixed;
+        width: 40%;
+        height:100vh;
     }
     
     .pageTitle h2 {
@@ -1533,11 +1563,3 @@ a {
     
     
 }
-
-
-/* Extending to larger desktop screens */
-@media only screen and (min-width: 4444px) {
-
-}
-
-/* font-family: "PTSerif",Georgia,serif; */
