--- a/css/main.css
+++ b/css/main.css
@@ -263,16 +263,11 @@ body {
     display: flex;
     justify-content: space-evenly;
     background: var(--theme_col4);
-    /* visibility: hidden; */
 }
 
-/* .contacts-view .social {
-    visibility: visible;
-} */
-
-/* .social {
-    visibility: visible;
-} */
+.main-summary .social {
+    visibility: hidden;
+}
 
 .summary {
     height: 100vmax;
@@ -307,15 +302,6 @@ body {
     justify-content:space-around;
     padding-top: 15%;
 }
-
-/* .socials {
-    grid-row: 9;
-    grid-column: 1/7;
-    display: flex;
-    justify-content: space-around;
-    background: var(--theme_col4);
-    padding: 5px 10%;
-} */
 
 .headingView {
     grid-column: 1 / 4;
@@ -1372,8 +1358,11 @@ a {
         align-self: end;
         display: flex;
         justify-content: space-evenly;
-        /* visibility: visible; */
         background: none;
+    }
+
+    .main-summary .social {
+        visibility: visible;
     }
 
     .projectsDisplay .social {
