--- a/css/main.css
+++ b/css/main.css
@@ -295,10 +295,6 @@ body {
     background: var(--theme_col4);
 }
 
-.main-summary .social {
-    /*visibility: hidden;*/
-}
-
 .summary {
     height: 100vmax;
     display: grid;
@@ -390,7 +386,6 @@ body {
 .highlight-text {
     font-weight: 600;
     color: var(--theme_col5);
-
 }
 
 .section-content {
@@ -670,7 +665,7 @@ body {
 .nav-container {
     top: 0;
     transition: all 1.2s cubic-bezier(0.39, 0.575, 0.565, 1);
-    transition-delay: 0.4s;
+    transition-delay: 0.3s;
 }
 
 .scrollDown {
@@ -1019,6 +1014,10 @@ a {
     margin: auto;
 }
 
+.external-link {
+    font-size: 1.2em;
+}
+
 .github-logo {
     filter: var(--img_filter);
 }
@@ -1277,12 +1276,17 @@ a {
         flex-direction: row;
     }
 
-    .single-project-link {
-        align-self: center;        
-    }
-
     .single-project-link p {
         font-size: 80%;
+    }
+
+    .single-project-link .external-link {
+        line-height: 80px;
+        margin: auto;
+    }
+
+    .external-link {
+        font-size: 1.6em;
     }
 
     .single-project-link .external-link img {
