adjusted margin for detailText boxes

--- a/css/main.css
+++ b/css/main.css
@@ -1382,6 +1382,9 @@ a {
     .detailText {
         font-size: 1.1em;
         line-height: 1.6em;
+    }
+
+    .intro-summary .detailText {
         margin-top: 10%;
         margin-bottom: 10%;
     }
